# duplicate_file_finder

./: CMakeLists.txt  LICENSE  README.md  cmake_clean
src/: duff_utils.cpp  duff_utils.h  md5.h  run_duff.cpp  run_duff.h  sys_scan.cpp  sys_scan.h
tests/: dup_finder.cpp
