cmake_minimum_required(VERSION 2.8)
project( duplicateFinder )

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON) 
set(Boost_USE_STATIC_RUNTIME OFF)
set(USE_OPENSSL TRUE)
FIND_PACKAGE( Boost 1.53.0 COMPONENTS system filesystem regex thread REQUIRED)
FIND_PACKAGE( OpenMP REQUIRED)

FIND_PATH(SQLITE3_INCLUDE_DIR sqlite3.h)
find_library(SQLITE3_LIBRARY sqlite3)
FIND_PATH(MAGIC_INCLUDE_DIR magic.h)
find_library(MAGIC_LIBRARY magic $ENV{MAGIC_LIB_PATH})

if(NOT OPENMP_FOUND)
message(SEND_ERROR "Failed to find the OpenMP library")
endif()

if(NOT MAGIC_INCLUDE_DIR)
  message(SEND_ERROR "Failed to find magic.h")
endif()
if(NOT MAGIC_LIBRARY)
  message(SEND_ERROR "Failed to find the magic library")
endif()

if(NOT SQLITE3_INCLUDE_DIR)
  message(SEND_ERROR "Failed to find sqlite3.h")
endif()
if(NOT SQLITE3_LIBRARY)
  message(SEND_ERROR "Failed to find the sqlite3 library")
endif()

include_directories(${Boost_INCLUDE_DIRS} ${MAGIC_INCLUDE_DIR} ${SQLITE3_INCLUDE_DIR})
SET(duff_SOURCES src/run_duff.cpp src/sys_scan.cpp src/duff_utils.cpp)	
SET(duff_HEADERS src/run_duff.h src/sys_scan.h src/duff_utils.h src/md5.h)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
add_executable(bin/dup_finder ${duff_SOURCES} ${duff_HEADERS})
add_definitions( -DBOOST_ALL_NO_LIB )
add_definitions( -DBOOST_ALL_DYN_LINK )
target_link_libraries(bin/dup_finder ${Boost_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} ${SQLITE3_LIBRARY} ${MAGIC_LIBRARY} )                                   
